Completed dropdown menu. Need to change text color

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -13,17 +13,13 @@ bannerpicture.jpg: bannerpicture-02119dda35a26f5cc9e2a722c51231d4.jpg
 bannerpicture/index.jpg: bannerpicture-02119dda35a26f5cc9e2a722c51231d4.jpg
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-e932ccf9b4fb482fb52ead92a1cf5f29.js
-application/index.js: application-e932ccf9b4fb482fb52ead92a1cf5f29.js
-application.css: application-831b78874f8f163217fa3f71d2dbc6bb.css
-application/index.css: application-831b78874f8f163217fa3f71d2dbc6bb.css
+application.js: application-5f54607d6e74bb436fe6b3ca9f6871d1.js
+application/index.js: application-5f54607d6e74bb436fe6b3ca9f6871d1.js
+application.css: application-d5b456e2ec43ac54b0d85db4642892fc.css
+application/index.css: application-d5b456e2ec43ac54b0d85db4642892fc.css
+glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
-twitter/glyphicons-halflings-regular.eot: twitter/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
-twitter/glyphicons-halflings-regular/index.eot: twitter/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
-twitter/glyphicons-halflings-regular.svg: twitter/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
-twitter/glyphicons-halflings-regular/index.svg: twitter/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
-twitter/glyphicons-halflings-regular.ttf: twitter/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
-twitter/glyphicons-halflings-regular/index.ttf: twitter/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
-twitter/glyphicons-halflings-regular.woff: twitter/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
-twitter/glyphicons-halflings-regular/index.woff: twitter/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
